# a2stp

./: CMakeLists.txt  bitlib.cpp  bitlib.h  const.h  su.h
client/: CMakeLists.txt  client  client.cpp  client.h  fmcl.sh  gt.list  gtt.conf  makefile  pc.list  run1024ins.sh  sample.txt  ssn.list  test  test_client.cpp
client/dump/: m1.txt
include/: CMakeLists.txt
include/bitlib/: CMakeLists.txt  bitlib.cpp  bitlib.h
include/bitlib/tests/: basic_test_example.cpp
include/utils/: CMakeLists.txt  const.h  su.h
server/: gtt.conf  makefile  makescreener  router.cpp  router.h  screener.cpp  screener.h  screening.conf  server.cpp  server.h  validator.cpp  validator.h
server/tests/: CMakeLists.txt
